--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "nasa_game",
+  "name": "nasa-project",
   "version": "1.0.0",
-  "description": "Nasa mission control game.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "install-server": "npm install --prefix server",
     "install-client": "npm install --prefix client",
     "install": "npm run install-server && npm run install-client",
     "server": "npm run watch --prefix server",
-    "client": "npm start --prefix",
+    "client": "npm start --prefix client",
     "watch": "npm run server & npm run client",
-    "test": "npm run test --prefix server && npm run test --prefix",
-  "deploy":"npm run build --prefix client && npm start --prefix server"
+    "deploy": "npm run build --prefix client && npm start --prefix server",
+    "deploy-cluster": "npm run build --prefix client && npm run cluster --prefix server",
+    "test": "npm test --prefix server && npm test --prefix client"
   },
   "keywords": [],
   "author": "",
